--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.7.8",
-    "autofit.js": "^2.0.5",
     "axios": "^1.6.2",
     "babel-eslint": "^10.1.0",
     "core-js": "^3.8.3",
+    "postcss-pxtorem": "^6.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
@@ -281,7 +281,7 @@
         2,
         "always"
       ],
-      "space-before-function-paren":"off",
+      "space-before-function-paren": "off",
       "space-in-parens": [
         2,
         "never"
